# embarcaTech-atividades

./: CMakeLists.txt  main.c  toolchain-arm-none-eabi.cmake  toolchain-rp2040.cmake  toolchain.cmake  toolchain_rp2040.cmake
.github/workflows/: main.yml
config/: FreeRTOSConfig.h
